plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'toy project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

	//ai요청
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// DB 접근 (config.txt에 DB_URL 있을 때만 사용, MSSQL)
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
	implementation 'com.microsoft.sqlserver:mssql-jdbc:12.4.0.jre11'

	//JWT토큰 방식 로그인
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// PDF 파일 텍스트 추출 라이브러리 추가
	implementation 'org.apache.pdfbox:pdfbox:2.0.29' // 최신 안정 버전 확인 필요

	// 검색기능 향상을 위한 라이브러리 추가
	implementation 'dev.langchain4j:langchain4j:0.31.0'
	implementation 'dev.langchain4j:langchain4j-open-ai:0.31.0' // LM Studio API 호환용
	implementation 'dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:0.31.0' // 기존 모델 (fallback용 유지)
	implementation 'dev.langchain4j:langchain4j-ollama:0.31.0' // 한국어 임베딩용 Ollama 연동

	// 0223 김소연(수정): 구조화 파싱(표 추출) 위해 tabula-java 추가
	// 이유: PDFBox 텍스트만으로는 표/셀 구조가 유실되어 <표1> 참조 매핑이 어려움
	implementation 'technology.tabula:tabula:1.0.5'
}

tasks.named('test') {
	useJUnitPlatform()
}

// JAR에는 uploads/format 미포함. 실행 시 JAR와 같은 디렉터리의 uploads, format 폴더만 사용.
// processResources { ... } 제거함.

// 0223 김소연(수정): Spring Boot 기본 로깅(logback)과 slf4j-simple 충돌 방지
// 이유: tabula/langchain 등 transitive dependency로 slf4j-simple이 들어오면 부팅 시 LoggerContext 충돌 발생
configurations.configureEach {
	exclude group: 'org.slf4j', module: 'slf4j-simple'
	// 0316(수정): mssql-jdbc, mybatis가 commons-logging.jar를 transitive dependency로 끌어오면
	// spring-jcl과 충돌하여 Windows 환경에서 부팅 시 클래스 로딩 데드락 발생 → 명시적 제외
	exclude group: 'commons-logging', module: 'commons-logging'
}

// 0223 김소연(수정): Windows(CP949) 환경에서 한글 주석/문자열 컴파일 오류 방지
tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}